<resources>
  <string name="app_name">DutchMarket</string>
  <string name="login">로그인</string>
  <string name="input_password">비밀번호 입력</string>
  <string name="input_email">학교 이메일 입력</string>
  <string name="register">회원으로 가입하기</string>
  <string name="send_auth_code">인증번호 발송</string>
  <string name="input_auth_code">인증번호 입력</string>
  <string name="input_nickname">닉네임 입력</string>
  <string name="register_complete">회원가입 완료</string>
  <string name="input_password_check">비밀번호 확인</string>
  <string name="popular_post">현재 인기글</string>

  <!-- TODO: Remove or change this placeholder text -->
  <string name="hello_blank_fragment">Hello blank fragment</string>
  <string name="latest_post">최신글</string>
  <string name="more_post">더보기</string>
  <string name="my_post">내가 쓴 글</string>
  <string name="joined_post">참여한 글</string>
  <string name="category">카테고리</string>
  <string name="profile_email">학교 이메일</string>
  <string name="profile_email_placeholder">tak8997@gmail.com</string>
  <string name="profile_nickname">닉네임</string>
  <string name="profile_nickname_placeholder">tak8997</string>
  <string name="profile_phonenum">전화번호</string>
  <string name="profile_phonenum_placeholder">010-8413-1196</string>
  <string name="profile_username">예금주명</string>
  <string name="profile_bank">은행명</string>
  <string name="profile_bank_number">계좌번호</string>
  <string name="profile_bank_number_placeholder">110-318-446664</string>
  <string name="profile_username_placeholder">이병탁</string>
  <string name="profile_security_setting">보안 설정</string>
  <string name="profile_password_change">비밀번호 변경</string>
  <string name="profile_title">개인정보 관리</string>
</resources>
