<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:background="@color/_FFFFFF"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".ui.LoginActivity">

  <android.support.v7.widget.Toolbar
    android:id="@+id/my_toolbar"
    android:layout_width="match_parent"
    android:layout_height="?attr/actionBarSize"
    android:background="@color/_FFFFFF"
    android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
    app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
    <TextView
      android:text="@string/app_name"
      android:textSize="14dp"
      android:textStyle="bold"
      android:layout_gravity="center"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"/>
  </android.support.v7.widget.Toolbar>

  <EditText
    android:id="@+id/email"
    android:text="@string/input_email"
    android:textColor="@color/_D5D5D5"
    android:textSize="14dp"
    android:paddingLeft="26dp"
    android:layout_width="match_parent"
    android:layout_height="48dp"
    android:layout_marginLeft="24dp"
    android:layout_marginRight="24dp"
    android:background="@drawable/login_layout_selector"
    android:layout_marginBottom="8dp"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintBottom_toTopOf="@+id/password"/>

  <EditText
    android:id="@+id/password"
    android:text="@string/input_password"
    android:textColor="@color/_D5D5D5"
    android:textSize="14dp"
    android:paddingLeft="26dp"
    android:layout_width="match_parent"
    android:layout_height="48dp"
    android:layout_marginLeft="24dp"
    android:layout_marginRight="24dp"
    android:background="@drawable/login_layout_selector"
    android:layout_marginBottom="30dp"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintBottom_toTopOf="@+id/login"/>

  <Button
    android:id="@+id/login"
    android:text="@string/login"
    android:textColor="@color/_FFFFFF"
    android:textSize="14dp"
    android:background="@drawable/login_button_layout"
    android:layout_width="match_parent"
    android:layout_height="48dp"
    android:layout_marginLeft="24dp"
    android:layout_marginRight="24dp"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"/>

  <TextView
    android:text="@string/register"
    android:textSize="14dp"
    android:textColor="@color/_516DC4"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="50dp"
    app:layout_constraintTop_toBottomOf="@+id/login"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"/>
</android.support.constraint.ConstraintLayout>