<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".ui.profile.ProfileActivity">
  <android.support.design.widget.AppBarLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <android.support.v7.widget.Toolbar
      android:id="@+id/profile_toolbar"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:background="@color/_FFFFFF"
      android:minHeight="?attr/actionBarSize"
      android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
      app:layout_scrollFlags="scroll|enterAlways"
      app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
      <TextView
        android:id="@+id/category_toolbar_title"
        android:text="@string/profile_title"
        android:textSize="14dp"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    </android.support.v7.widget.Toolbar>
  </android.support.design.widget.AppBarLayout>

  <android.support.constraint.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/_F2F2F2"
    app:layout_behavior="@string/appbar_scrolling_view_behavior" >
    <RelativeLayout
      android:id="@+id/profile_email_container"
      android:layout_width="match_parent"
      android:layout_height="49dp"
      android:paddingLeft="24dp"
      android:paddingRight="35dp"
      android:background="@color/_FFFFFF"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent">
      <TextView
        android:text="@string/profile_email"
        android:textSize="14dp"
        android:textColor="@color/_516DC4"
        android:layout_centerInParent="true"
        android:layout_alignParentLeft="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
      <EditText
        android:text="@string/profile_email_placeholder"
        android:textSize="14dp"
        android:textColor="@color/_939395"
        android:background="@android:color/transparent"
        android:layout_centerInParent="true"
        android:layout_alignParentRight="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
      <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/_F2F2F2"
        android:layout_alignParentBottom="true"/>
    </RelativeLayout>

    <RelativeLayout
      android:id="@+id/profile_nickname_container"
      android:layout_width="match_parent"
      android:layout_height="49dp"
      android:paddingLeft="24dp"
      android:paddingRight="35dp"
      android:background="@color/_FFFFFF"
      app:layout_constraintTop_toBottomOf="@+id/profile_email_container"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent">
      <TextView
        android:text="@string/profile_nickname"
        android:textSize="14dp"
        android:textColor="@color/_516DC4"
        android:layout_centerInParent="true"
        android:layout_alignParentLeft="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
      <EditText
        android:text="@string/profile_nickname_placeholder"
        android:textSize="14dp"
        android:textColor="@color/_939395"
        android:background="@android:color/transparent"
        android:layout_centerInParent="true"
        android:layout_alignParentRight="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
      <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/_F2F2F2"
        android:layout_alignParentBottom="true"/>
    </RelativeLayout>

    <RelativeLayout
      android:id="@+id/profile_phonenum_container"
      android:layout_width="match_parent"
      android:layout_height="49dp"
      android:paddingLeft="24dp"
      android:paddingRight="35dp"
      android:background="@color/_FFFFFF"
      app:layout_constraintTop_toBottomOf="@+id/profile_nickname_container"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent">
      <TextView
        android:text="@string/profile_phonenum"
        android:textSize="14dp"
        android:textColor="@color/_516DC4"
        android:layout_centerInParent="true"
        android:layout_alignParentLeft="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
      <EditText
        android:text="@string/profile_phonenum_placeholder"
        android:textSize="14dp"
        android:textColor="@color/_939395"
        android:background="@android:color/transparent"
        android:layout_centerInParent="true"
        android:layout_alignParentRight="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
      <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/_F2F2F2"
        android:layout_alignParentBottom="true"/>
    </RelativeLayout>

    <RelativeLayout
      android:id="@+id/profile_username_container"
      android:layout_width="match_parent"
      android:layout_height="49dp"
      android:layout_marginTop="10dp"
      android:paddingLeft="24dp"
      android:paddingRight="35dp"
      android:background="@color/_FFFFFF"
      app:layout_constraintTop_toBottomOf="@+id/profile_phonenum_container"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent">
      <TextView
        android:text="@string/profile_username"
        android:textSize="14dp"
        android:textColor="@color/_516DC4"
        android:layout_centerInParent="true"
        android:layout_alignParentLeft="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
      <EditText
        android:text="@string/profile_username_placeholder"
        android:textSize="14dp"
        android:textColor="@color/_939395"
        android:background="@android:color/transparent"
        android:layout_centerInParent="true"
        android:layout_alignParentRight="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
      <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/_F2F2F2"
        android:layout_alignParentBottom="true"/>
    </RelativeLayout>

    <RelativeLayout
      android:id="@+id/profile_bank_container"
      android:layout_width="match_parent"
      android:layout_height="49dp"
      android:paddingLeft="24dp"
      android:paddingRight="22dp"
      android:background="@color/_FFFFFF"
      app:layout_constraintTop_toBottomOf="@+id/profile_username_container"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent">
      <TextView
        android:text="@string/profile_bank"
        android:textSize="14dp"
        android:textColor="@color/_516DC4"
        android:layout_centerInParent="true"
        android:layout_alignParentLeft="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
      <TextView
        android:id="@+id/profile_bank_number"
        android:text="신한은행"
        android:textSize="14dp"
        android:textColor="@color/_939395"
        android:layout_toLeftOf="@+id/profile_bank_spinner"
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
      <ImageView
        android:id="@+id/profile_bank_spinner"
        android:src="@drawable/dropdown"
        android:layout_marginLeft="6dp"
        android:layout_centerInParent="true"
        android:layout_alignParentRight="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
      <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/_F2F2F2"
        android:layout_alignParentBottom="true"/>
    </RelativeLayout>

    <RelativeLayout
      android:id="@+id/profile_bank_number_container"
      android:layout_width="match_parent"
      android:layout_height="49dp"
      android:paddingLeft="24dp"
      android:paddingRight="35dp"
      android:background="@color/_FFFFFF"
      app:layout_constraintTop_toBottomOf="@+id/profile_bank_container"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent">
      <TextView
        android:text="@string/profile_bank_number"
        android:textSize="14dp"
        android:textColor="@color/_516DC4"
        android:layout_centerInParent="true"
        android:layout_alignParentLeft="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
      <EditText
        android:text="@string/profile_bank_number_placeholder"
        android:textSize="14dp"
        android:textColor="@color/_939395"
        android:background="@android:color/transparent"
        android:layout_centerInParent="true"
        android:layout_alignParentRight="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
      <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/_F2F2F2"
        android:layout_alignParentBottom="true"/>
    </RelativeLayout>

    <RelativeLayout
      android:id="@+id/profile_security_container"
      android:layout_width="match_parent"
      android:layout_height="49dp"
      android:layout_marginTop="10dp"
      android:paddingLeft="24dp"
      android:paddingRight="22dp"
      android:background="@color/_FFFFFF"
      app:layout_constraintTop_toBottomOf="@+id/profile_bank_number_container"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent">
      <TextView
        android:text="@string/profile_security_setting"
        android:textSize="14dp"
        android:textColor="@color/_516DC4"
        android:layout_centerInParent="true"
        android:layout_alignParentLeft="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
      <TextView
        android:text="@string/profile_password_change"
        android:textSize="14dp"
        android:textColor="@color/_939395"
        android:background="@android:color/transparent"
        android:layout_centerInParent="true"
        android:layout_toLeftOf="@+id/profile_password_change_nav"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

      <ImageView
        android:id="@+id/profile_password_change_nav"
        android:src="@drawable/dropdown"
        android:layout_marginLeft="6dp"
        android:layout_centerInParent="true"
        android:layout_alignParentRight="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

      <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/_F2F2F2"
        android:layout_alignParentBottom="true"/>
    </RelativeLayout>

  </android.support.constraint.ConstraintLayout>

  <android.support.design.widget.FloatingActionButton
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom|end"
    android:layout_margin="16dp"
    android:elevation="5dp"
    android:src="@drawable/fab"
    android:backgroundTint="@color/_516DC4"
    app:backgroundTint="@color/_516DC4"
    app:fabSize="normal"/>
</android.support.design.widget.CoordinatorLayout>