<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/drawer_layout"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:openDrawer="start"
  tools:context=".ui.main.MainActivity">

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content">

      <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/_FFFFFF"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:layout_scrollFlags="scroll|enterAlways"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
        <TextView
          android:text="@string/app_name"
          android:textSize="14dp"
          android:textStyle="bold"
          android:layout_gravity="center"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"/>
      </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>

    <android.support.design.widget.CoordinatorLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent">

      <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <android.support.constraint.ConstraintLayout
          android:id="@+id/content_container"
          android:layout_marginTop="28dp"
          android:layout_width="match_parent"
          android:layout_height="match_parent">

          <TextView
            android:id="@+id/popular_post"
            android:textColor="@color/_000000"
            android:textSize="14dp"
            android:text="@string/popular_post"
            android:layout_marginLeft="17dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

          <android.support.v4.view.ViewPager
            android:id="@+id/pager"
            android:layout_marginTop="23dp"
            android:layout_marginLeft="17dp"
            android:layout_width="match_parent"
            android:layout_height="169dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/popular_post"/>

          <TextView
            android:id="@+id/latest_post"
            android:text="@string/latest_post"
            android:textColor="@color/_000000"
            android:layout_marginTop="33dp"
            android:layout_marginLeft="17dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/pager"
            app:layout_constraintLeft_toLeftOf="parent"/>

          <TextView
            android:id="@+id/more_post"
            android:text="@string/more_post"
            android:textColor="@color/_939395"
            android:layout_marginTop="33dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="17dp"
            app:layout_constraintTop_toBottomOf="@+id/pager"
            app:layout_constraintRight_toRightOf="parent"/>

          <android.support.v7.widget.RecyclerView
            android:id="@+id/post_recycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:layout_marginLeft="17dp"
            android:layout_marginRight="17dp"
            app:layout_constraintTop_toBottomOf="@+id/latest_post"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        </android.support.constraint.ConstraintLayout>
      </android.support.v4.widget.NestedScrollView>

      <android.support.design.widget.FloatingActionButton
        android:id="@+id/add_post"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:elevation="5dp"
        android:src="@drawable/fab"
        android:backgroundTint="@color/_516DC4"
        app:fabSize="normal"
        app:layout_anchor="@id/content_container"
        app:layout_anchorGravity="bottom|right|end" />
    </android.support.design.widget.CoordinatorLayout>
  </LinearLayout>

  <android.support.design.widget.NavigationView
    android:id="@+id/nav_view"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:layout_gravity="start"
    android:fitsSystemWindows="true">
    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="vertical">

      <include layout="@layout/nav_header" />

      <TextView
        android:text="@string/category"
        android:textSize="14dp"
        android:textColor="@color/_000000"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="49dp"
        android:layout_marginLeft="30dp"/>

      <ListView
        android:id="@+id/nav_listview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="15dp"/>

    </LinearLayout>
  </android.support.design.widget.NavigationView>

  <!--android:layout_marginTop="10dp"-->
</android.support.v4.widget.DrawerLayout>